k8s/files/issuer-node-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-issuer-node
  labels:
    app: api-issuer-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-issuer-node
  template:
    metadata:
      labels:
        app: api-issuer-node # Label for the pod and will be used in the service
    spec:
      containers:
        - name: api
          image: 0xpolygon/issuernode
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3001
          command: ["sh", "-c"]
          args: ["./migrate; ./platform"]

          volumeMounts: 
          - mountPath: /vault/data
            name: vault-volume

          livenessProbe:
            httpGet:
              path: /status
              port: 3001
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 60
      
      volumes:
      - name: vault-volume
        persistentVolumeClaim:
            claimName: vault-issuer-node-pvc
