k8s/files/issuer-node-api-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-ui-issuer-node
  labels:
    app: api-ui-issuer-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-ui-issuer-node
  template:
    metadata:
      labels:
        app: api-ui-issuer-node # Label for the pod and will be used in the service
    spec:
      containers:
        - name: api-ui
          image: x1m3/issuer-node
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3002
          command: ["sh", "-c"]
          args: ["./migrate; ./platform_ui"]

          volumeMounts:
          - mountPath: /did/data
            name: issuer-node-volume
          - mountPath: /vault/data
            name: vault-volume

          livenessProbe:
            httpGet:
              path: /status
              port: 3002
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 60
          
      volumes:
      - name: issuer-node-volume
        persistentVolumeClaim:
          claimName: issuer-node-pvc
      - name: vault-volume
        persistentVolumeClaim:
            claimName: vault-issuer-node-pvc
