k8s/files/issuer-node-notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-issuer-node
  labels:
    app: notifications-issuer-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-issuer-node
  template:
    metadata:
      labels:
        app: notifications-issuer-node # Label for the pod and will be used in the service
    spec:
      containers:
        - name: notifications
          image: martinsaporiti/issuernode_alpine4
          imagePullPolicy: "IfNotPresent"
          command: ["sh", "-c"]
          args: ["./notifications"]

          volumeMounts:
            - mountPath: /did/data
              name: issuer-node-volume
            - mountPath: /vault/data
              name: vault-volume
      volumes:
      - name: issuer-node-volume
        persistentVolumeClaim:
          claimName: issuer-node-pvc
      - name: vault-volume
        persistentVolumeClaim:
            claimName: vault-issuer-node-pvc
