k8s/files/issuer-node-pending-publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pending-publisher-issuer-node
  labels:
    app: pending-publisher-issuer-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pending-publisher-issuer-node
  template:
    metadata:
      labels:
        app: pending-publisher-issuer-node # Label for the pod and will be used in the service
    spec:
      containers:
        - name: pending-publisher
          image: martinsaporiti/issuernode_alpine4
          imagePullPolicy: "Always"
          command: ["sh", "-c"]
          args: ["./pending_publisher"]
          volumeMounts:
          - mountPath: /did/data
            name: issuer-node-volume
          - mountPath: /vault/data
            name: vault-volume

      volumes:
      - name: issuer-node-volume
        persistentVolumeClaim:
          claimName: issuer-node-pvc
      - name: vault-volume
        persistentVolumeClaim:
            claimName: vault-issuer-node-pvc
