k8s/files/issuer-node-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-issuer-node
  labels:
    app: ui-issuer-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-issuer-node
  template:
    metadata:
      labels:
        app: ui-issuer-node # Label for the pod and will be used in the service
    spec:
      containers:
        - name: ui
          image: 0xpolygon/issuernode-ui
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
