k8s/files/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-issuer-node
  labels:
    app: postgres-issuer-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-issuer-node
  template:
    metadata:
      labels:
        app: postgres-issuer-node # Label for the pod and will be used in the service
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-initdb
              readOnly: true
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgresql-issuer-node-pvc
        - name: postgres-initdb
          configMap:
            name: postgres-secret
            defaultMode: 0500
            items:
            - key: init.sql
              path: init.sql
