k8s/files/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-issuer-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-issuer-node
  template:
    metadata:
      labels:
        app: redis-issuer-node
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
            - containerPort: 6379
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "0.5"
            memory: 1Gi
