k8s/files/issuer-node-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-issuer-node-svc
  labels:
    app: issuer-node
spec:
  type: NodePort
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      nodePort: 30001

  selector:
    app: api-issuer-node
