k8s/files/issuer-node-api-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-ui-issuer-node-svc
  labels:
    app: issuer-node
spec:
  type: NodePort
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  selector:
    app: api-ui-issuer-node
