k8s/files/issuer-node-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-issuer-node-svc
  labels:
    app: issuer-node
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: ui-issuer-node
