k8s/files/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-issuer-node-svc
  labels:
    app: issuer-node
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres-issuer-node
