k8s/files/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-issuer-node-svc
  labels:
    app: issuer-node
spec:
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis-issuer-node
